Show click stat in link page

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -165,10 +165,16 @@ body {
       .original {
         color: #9e9e9e;
       }
+      .details {
+        a {
+          padding-right: 5px;
+        }
+      }
       .shorten {
         font-size: 16px;
         font-weight: bold;
         color: #75bfff;
+        padding-right: 10px;
       }
     }
   }
