--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -13,7 +13,7 @@
         </div>
       </div>
       <div class="inner cover">
-        <%= form_with model: @link, class: 'form form-inline' do |f| %>
+        <%= form_with model: @link, local: true, id: 'shorten-form', class: 'form form-inline' do |f| %>
             <%= f.text_field :url, class: 'input-lg form-control', placeholder: 'Place your URL here to shorten it.' %>
             <input class="btn btn-primary btn-lg" type="submit" value="Shorten">
         <% end %>
@@ -22,18 +22,25 @@
           <a href="https://bitly.com/"><b>bitly</b></a>
         </p>
 
-        <% if @created_link %>
-            <div class="panel panel-default link-container">
-              <div class="panel-body">
-                <div class="original"><%= @created_link.url %></div>
-                <div class="details">
-                  <span class="shorten"><%= link_shorten_path @created_link, full: false %></span>
-                  <a class="clipboard" data-clipboard-text="<%= link_shorten_path @created_link %>">Copy</a>
-                  <%= link_to 'Stat', link_path(@created_link) %>
-                </div>
-              </div>
+        <div class="panel panel-default link-container <%= 'hidden' unless @created_link %>">
+          <div class="panel-body">
+            <div class="original"><%= @created_link.url if @created_link %></div>
+            <div class="details">
+              <span class="shorten" data-prepend="<%= link_shorten_prepend(full: false) %>">
+                <%= link_shorten_path(@created_link, full: false) %>
+              </span>
+              <a class="clipboard" data-clipboard-text="<%= link_shorten_path @created_link %>">
+                Copy
+              </a>
+              <a class="stat"
+                 data-prepend="<%= links_path %>"
+                 href="<%= link_path(@created_link) if @created_link %>">
+                Stat
+              </a>
             </div>
-        <% end %>
+          </div>
+        </div>
+
        <div class="row">
          <div class="col-lg-12">
            <p class="lead">
