--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -41,7 +41,13 @@
           </div>
         </div>
 
-       <div class="row">
+        <% if flash[:error] %>
+            <div class="alert alert-danger" role="alert">
+              <%= flash[:error] %>
+            </div>
+        <% end %>
+
+        <div class="row">
          <div class="col-lg-12">
            <p class="lead">
              <%= link_to 'Learn more', features_path, class: 'btn btn-lg btn-default' %>
