--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -170,7 +170,7 @@ body {
           padding-right: 5px;
         }
       }
-      .shorten {
+      .shortened {
         font-size: 16px;
         font-weight: bold;
         color: #75bfff;
