--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -7,7 +7,7 @@
         </div>
       </div>
       <div class="inner cover">
-        <%= form_with model: @link, local: true, id: 'shorten-form', class: 'form form-inline' do |f| %>
+        <%= form_with model: @link, local: true, id: 'shortened-form', class: 'form form-inline' do |f| %>
             <%= f.text_field :url, class: 'input-lg form-control', placeholder: 'Place your URL here to shorten it.' %>
             <input class="btn btn-primary btn-lg" type="submit" value="Shorten">
         <% end %>
@@ -20,10 +20,10 @@
           <div class="panel-body">
             <div class="original"><%= @created_link.url if @created_link %></div>
             <div class="details">
-              <span class="shorten" data-prepend="<%= site_url(full: false) %>">
-                <%= link_shorten_path(@created_link, full: false) %>
+              <span class="shortened" data-prepend="<%= site_url(full: false) %>">
+                <%= link_shortened_path(@created_link, full: false) %>
               </span>
-              <a class="clipboard" data-clipboard-text="<%= link_shorten_path @created_link %>">
+              <a class="clipboard" data-clipboard-text="<%= link_shortened_path @created_link %>">
                 Copy
               </a>
             </div>
